[chore] 팀 랭킹 조회 시 유저 팀 정보 나오도록 응답값 수정